improve module info & unit tests

--- a/Module/CloggyBlog/info.ini
+++ b/Module/CloggyBlog/info.ini
@@ -1,4 +1,6 @@
-[basic]
+[info]
 name = CloggyBlog
 author = Cloggy
 desc = not so simple blog engine
+url = https://github.com/hiraq/Cloggy
+dependency = -
