--- a/Module/CloggyUsers/info.ini
+++ b/Module/CloggyUsers/info.ini
@@ -1,4 +1,6 @@
-[basic]
+[info]
 name = CloggyUsers
 author = Cloggy
 desc = clog user management
+url = https://github.com/hiraq/Cloggy
+dependency = -
