--- a/build.xml
+++ b/build.xml
@@ -28,56 +28,54 @@
         </chmod>           
     </target>
     
+    <target name="run_cake_test">
+        <exec command="./../../../app/Console/cake 
+            test Cloggy ${test_name} 
+            --stderr 
+            --configuration phpunit.xml
+            --log-junit webroot/test_reports/${group}/junit.xml
+            --coverage-html webroot/test_reports/${group}/coverage_ui
+            --coverage-clover webroot/test_reports/${group}/clover.xml" passthru="true" />
+    </target>
+    
     <target name="test_components" depends="clean_cache">
         <phingcall target="clean_reports">
             <property name="deleted" value="components" />
         </phingcall> 
-        <exec command="./../../../app/Console/cake 
-            test Cloggy AllComponent 
-            --stderr 
-            --configuration phpunit.xml
-            --log-junit webroot/test_reports/components/junit.xml
-            --coverage-html webroot/test_reports/components/coverage_ui
-            --coverage-clover webroot/test_reports/components/clover.xml" passthru="true" />                    
+        <phingcall target="run_cake_test">
+            <property name="test_name" value="AllComponent" />
+            <property name="group" value="components" />
+        </phingcall>                   
     </target>
     
     <target name="test_helpers" depends="clean_cache">
         <phingcall target="clean_reports">
             <property name="deleted" value="helpers" />
         </phingcall>   
-        <exec command="./../../../app/Console/cake 
-            test Cloggy AllHelper
-            --stderr 
-            --configuration phpunit.xml
-            --log-junit webroot/test_reports/helpers/junit.xml
-            --coverage-html webroot/test_reports/helpers/coverage_ui
-            --coverage-clover webroot/test_reports/helpers/clover.xml" passthru="true" />            
+        <phingcall target="run_cake_test">
+            <property name="test_name" value="AllHelper" />
+            <property name="group" value="helpers" />
+        </phingcall>                    
     </target>
     
     <target name="test_libs" depends="clean_cache">
         <phingcall target="clean_reports">
             <property name="deleted" value="libs" />
         </phingcall> 
-        <exec command="./../../../app/Console/cake 
-            test Cloggy AllLib
-            --stderr 
-            --configuration phpunit.xml
-            --log-junit webroot/test_reports/libs/junit.xml
-            --coverage-html webroot/test_reports/libs/coverage_ui
-            --coverage-clover webroot/test_reports/libs/clover.xml" passthru="true" />          
+        <phingcall target="run_cake_test">
+            <property name="test_name" value="AllLib" />
+            <property name="group" value="libs" />
+        </phingcall>                             
     </target>
     
     <target name="test_models" depends="clean_cache">
         <phingcall target="clean_reports">
             <property name="deleted" value="models" />
         </phingcall> 
-        <exec command="./../../../app/Console/cake 
-            test Cloggy AllModel
-            --stderr 
-            --configuration phpunit.xml
-            --log-junit webroot/test_reports/models/junit.xml
-            --coverage-html webroot/test_reports/models/coverage_ui
-            --coverage-clover webroot/test_reports/models/clover.xml" passthru="true" />        
+        <phingcall target="run_cake_test">
+            <property name="test_name" value="AllModel" />
+            <property name="group" value="models" />
+        </phingcall>                          
     </target>
     
     <target name="test" description="testing">
