--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ before_script:
     }" > ../cakephp/app/Config/database.php
 
 script:
-  - ./lib/Cake/Console/cake test Cloggy AllComponent --stderr
+  - ./app/Console/cake test Cloggy AllComponent --stderr
 
 notifications:
   email: false
